# playwright-heap-snapshot

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
playwrong/: __main__.py  build_object.py  models.py  snapshot.py  structured_graph.py
