[tool.poetry]
name = "playwrong"
version = "0.1.0"
description = "Capture and inspect heap snapshots from Playwright"
authors = ["byt3bl33d3r <byt3bl33d3r@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
playwright = "1.40.0"
pydantic = "^2.7.1"
typer = "^0.12.3"

[tool.poetry.scripts]
playwright-heap-snapshot = 'playwrong.__main__:app'

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
